--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ APP_NAME=Webbee_Test
 APP_ENV=local
 APP_KEY=base64:jqgibe8FkBH9Djhg7M6SUsHllOKcFHEgc9Kq2jnomsQ=
 APP_DEBUG=true
+
+
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel-test
+DB_USERNAME=root
+DB_PASSWORD=
